test/functions/resolution/errors/testBadCallCandidates.2-all.good
testBadCallCandidates.chpl:71: In function 'main':
testBadCallCandidates.chpl:79: error: unresolved call 'owned D.foo("hi")'
testBadCallCandidates.chpl:33: note: this candidate did not match: D.foo(x: C)
testBadCallCandidates.chpl:79: note: because actual argument #1 with type 'string'
testBadCallCandidates.chpl:33: note: is passed to formal 'x: C'
testBadCallCandidates.chpl:79: note: other candidates are:
testBadCallCandidates.chpl:5: note:   C.foo(x: string)
testBadCallCandidates.chpl:59: note:   foo(x: C)
testBadCallCandidates.chpl:62: note:   foo(x: D)
